syntax = "proto3";

package sequence;

service SequenceService {
	// 获取seq
	rpc FindSequence(FindSequenceRequest) returns (FindSequenceResponse) {}
	// 创建seq
	rpc AddSequence(AddRequest) returns (AddResponse) {}
}

message FindSequenceRequest{
	string sequence_key = 1; // seq的键
	string database = 2; // 数据库
}

message FindSequenceResponse{
	int64 sequence = 1;
}

message AddRequest{
	string sequence_key = 1; // seq的键
	int64  start_value = 2; // seq的默认开始值
	string database = 3; // 数据库
}

message AddResponse{
	int64 sequence = 1; // seq的值
}
